--- a/webpag/foodpag_phon.css
+++ b/webpag/foodpag_phon.css
@@ -30,8 +30,11 @@
     margin: 9px -30 px;
   }
   .cilent-sec {
-    height: 302px;
+    height: auto;
     width: 100%;
+  }
+  .service.cilent-sec {
+    background: url(../images/mobail\ using\ img.jpg) center/cover no-repeat;
   }
 
   .heading-4 {
