--- a/webpag/foodpag_phon.css
+++ b/webpag/foodpag_phon.css
@@ -32,6 +32,7 @@
   .cilent-sec {
     height: auto;
     width: 100%;
+    margin-bottom: 120px;
   }
   .service.cilent-sec {
     background: url(../images/mobail\ using\ img.jpg) center/cover no-repeat;
