--- a/webpag/foodpag.css
+++ b/webpag/foodpag.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  /* overflow: hidden; */
 }
 
 /* navbar  */
@@ -102,21 +102,22 @@
   display: flex;
   justify-content: center;
   font-size: 40px;
-  padding: 10px;
+  padding: 12px;
 }
 
 .box {
   margin: 16px;
   display: flex;
   margin-top: 8px;
-  padding: 10px;
+  padding: 20px;
 }
 .box .card {
-  border: 2px solid red;
-  padding: 34px;
+  /* border: 2px solid red; */
+  padding: 24px;
   margin: 15px 15px;
   border-radius: 23px;
   background-color: rgb(186, 172, 172);
+  box-shadow: 5px 10px 18px #888888;
 }
 .box .card img {
   height: 190px;
@@ -147,13 +148,14 @@
 .cilent-sec {
   height: auto;
   margin-bottom: 100px;
+  /* padding: 50px; */
 }
 .cilent-sec::before {
   content: "";
   position: absolute;
   background: url(../images/bacground\ img.jpg) center/cover no-repeat;
   width: 100%;
-  height: 40%;
+  height: 30%;
   z-index: 1;
   opacity: 0.3;
 }
@@ -179,7 +181,7 @@
   display: flex;
   justify-content: center;
   font-size: 40px;
-  padding: 10px;
+  padding: 5px;
 }
 
 .contectus {
@@ -187,6 +189,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 30px;
 }
 .contectus textarea,
 .contectus input {
@@ -196,9 +199,7 @@
 .form-group {
   padding: 10px;
 }
-.contectus form {
-  width: 40%;
-}
+
 .contectus form {
   font-size: 25px;
   font-weight: bold;
