--- a/webpag/foodpag_phon.css
+++ b/webpag/foodpag_phon.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 1170px) {
+@media only screen and (max-width: 800px) {
   #navbar {
     flex-direction: column;
     width: 100%;
@@ -32,22 +32,18 @@
   .cilent-sec {
     height: auto;
     width: 100%;
-    /* margin-bottom: 170px; */
   }
-  /* .cilent-sec::before {
-    height: 30%;
-  } */
+
   .service.cilent-sec {
     background: url(../images/mobail\ using\ img.jpg) center/cover no-repeat;
   }
 
   .heading-4 {
     margin-left: -10px;
-    /* padding: 18px; */
   }
   .contectus textarea,
   .contectus input {
-    width: 90%;
+    width: 80%;
     padding: 0.5rem;
   }
   .contectus {
@@ -56,5 +52,9 @@
 
   .foter {
     width: 100%;
+  }
+
+  .contect-sec {
+    margin-top: 80px;
   }
 }
