--- a/webpag/foodpag.css
+++ b/webpag/foodpag.css
@@ -53,49 +53,67 @@ body {
   opacity: 0.8;
 }
 /* section-1  */
-.sec-1 {
-  display: flex;
-  flex-direction: column;
-  padding: 70px 30px;
-  height: 450px;
-  justify-content: center;
-  align-items: center;
+
+.box-img {
+  width: 100%;
+  height: 600px;
+  text-align: center;
   position: relative;
 }
-.sec-1::before {
-  content: "";
-  background: url("../images/lily-banse--YHSwy6uqvk-unsplash.jpg") no-repeat
-    center center/cover;
-  height: 100%;
+
+.box-img img {
   width: 100%;
+  height: 100%;
+  display: block;
+  opacity: 0.8;
+}
+.box-img img:hover {
+  opacity: 0.9;
+}
+.overlay {
   position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: -1;
-  opacity: 0.89;
-}
-.heading {
-  color: rgb(10, 11, 11);
-  font-size: 45px;
-  text-align: center;
-}
-.preg-1 {
-  color: rgb(26, 28, 28);
-  font-size: 30px;
-  text-align: center;
-  padding: 5px;
+  bottom: 40%;
+  left: 5%;
+  z-index: 2;
 }
 .btn-1 {
-  font-size: 20px;
-  padding: 10px;
-  background-color: black;
-  color: rgb(230, 235, 235);
+  text-decoration: none;
+  display: inline-block;
+  background-color: rgb(32, 35, 32);
+  color: rgb(245, 239, 239);
+  padding: 10px 20px;
+  font-size: 15px;
   border-radius: 10px;
-  opacity: 0.7;
 }
 .btn-1:hover {
-  background-color: rgb(249, 248, 248);
-  color: black;
+  background-color: white;
+  color: rgb(46, 42, 42);
+  font-weight: bold;
+}
+
+.box-img.overlay::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  z-index: 1;
+  transition: opacity 0.02s ease-in;
+}
+.overlay h1 {
+  margin-top: 170px;
+  font-size: 3em;
+  color: white;
+}
+.overlay p {
+  margin-top: 8px;
+  font-size: 20px;
+  color: white;
+  padding: 10px;
 }
 
 /* section-2  */
@@ -118,7 +136,7 @@ body {
   padding: 24px;
   margin: 15px 15px;
   border-radius: 23px;
-  background-color: rgb(186, 172, 172);
+  background-color: #ffffff36;
   box-shadow: 5px 10px 18px #888888;
 }
 .box .card img {
@@ -149,7 +167,7 @@ body {
 }
 .cilent-sec {
   height: auto;
-  margin-top: 100px;
+  margin-top: 35px;
   /* margin-bottom: 100px; */
 }
 .cilent-sec::before {
@@ -171,7 +189,7 @@ body {
   height: 94px;
 }
 .cilent-item {
-  padding: 23px;
+  padding: 0px;
 }
 
 /* section-4   */
@@ -183,7 +201,8 @@ body {
   display: flex;
   justify-content: center;
   font-size: 40px;
-  padding: 5px;
+  padding: 10px;
+  margin-top: 60px;
 }
 
 .contectus {
