--- a/webpag/foodpag_phon.css
+++ b/webpag/foodpag_phon.css
@@ -10,9 +10,16 @@
   .heading {
     margin-top: 100px;
   }
-  .sec-1 {
-    padding: 56px 30px;
-    height: auto;
+  .box-img {
+    flex-direction: column;
+    width: 100%;
+  }
+  .overlay {
+    margin-top: 20px;
+  }
+
+  .overlay h1 {
+    font-size: 30px;
   }
 
   .heading-2 {
@@ -55,6 +62,6 @@
   }
 
   .contect-sec {
-    margin-top: 80px;
+    margin-top: 120px;
   }
 }
