--- a/New folder/foodweb.css
+++ b/New folder/foodweb.css
@@ -97,7 +97,7 @@ section.contant {
 
 .section-2 {
   width: 100%;
-  height: 200px;
+  height: 600px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -166,5 +166,30 @@ section.contant--2 {
 .menu h1 span {
   color: #fac031;
   margin-left: 15px;
-  font-family: "Dancing Script", cursive;   
+  font-family: "Dancing Script", cursive;
+}
+
+.menu h1 span::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #fac031;
+  display: block;
+  position: relative;
+  bottom: 15px;
+  font-family: "Dancing Script", cursive;
+}
+.menu.menu_box {
+  width: 95%;
+  margin: 0 auto;
+}
+.menu.menu_card {
+  width: 325px;
+  height: 480px;
+  padding-top: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.menu.menu_card.menu-img {
+  width: 150px;
 }
