--- a/New folder/foodweb.css
+++ b/New folder/foodweb.css
@@ -49,7 +49,7 @@ nav .icon i:hover {
 /* section-1  */
 .section-1 {
   width: 100%;
-  height: 600px;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
 }
@@ -64,7 +64,7 @@ section.contant {
 }
 .contant h1 {
   font-size: 60px;
-  margin-top: 90px;
+  margin-top: 110px;
 }
 .contant h1 span {
   font-size: 60px;
@@ -72,7 +72,8 @@ section.contant {
   font-family: "Dancing Script", cursive;
 }
 .img-1 {
-  width: 30%;
+  width: 49%;
+  margin-top: 50px;
 }
 .contant p {
   font-size: 20px;
@@ -97,12 +98,13 @@ section.contant {
 
 .section-2 {
   width: 100%;
-  height: 600px;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
 }
 .contant-2 {
-  width: 45%;
+  width: 50%;
+  padding: 0 13px;
 }
 
 section.contant--2 {
@@ -124,7 +126,7 @@ section.contant--2 {
 
 .img-2 {
   width: 50%;
-  margin-top: 60px;
+  margin-top: 50px;
 }
 
 .contant-2 h3 {
