--- a/New folder/zay_phon.css
+++ b/New folder/zay_phon.css
@@ -44,6 +44,8 @@
   }
   .footer {
     height: auto;
+    /* padding: 25px 16p; */
+    padding: 28px 14px;
   }
   .footer-price {
     display: flex;
@@ -54,6 +56,7 @@
     margin-left: 10px;
     padding: 10px;
   }
-  .end {
+  .footer_icon {
+    margin-left: 0;
   }
 }
