--- a/New folder/zay.css
+++ b/New folder/zay.css
@@ -42,55 +42,41 @@
 }
 
 /* header  */
-#header {
-  width: 100%;
+nav {
+  background-color: #fff;
   height: 80px;
+  width: 100%;
 }
-header nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background: white;
-}
-
-nav .logo p {
-  width: 100px;
-  font-size: 55px;
-  font-weight: 800;
+.logo {
   color: green;
-  margin: 6px;
+  font-size: 55px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
 }
-header nav ul {
-  list-style: none;
+nav ul {
+  float: right;
+  /* margin-right: 40px; */
 }
-
-header nav ul li {
+nav ul li {
   display: inline-block;
-  margin: 0 35px;
+  line-height: 80px;
+  margin: 0 5px;
 }
-
-header nav ul li a {
-  text-decoration: none;
+nav ul li a {
   color: black;
-
-  font-size: 20px;
-}
-nav ul li a:hover {
-  color: #2c8ba3;
-}
-nav .icon {
-  font-size: 20px;
-  padding: 10px;
-}
-nav .icon i:hover {
-  color: #fac031;
+  font-size: 28px;
+  padding: 0px 13px;
+  text-decoration: none;
 }
 /* slider  */
 .items {
   width: 100%;
   height: 500px;
   display: flex;
+  /* flex-direction: row-reverse; */
 }
+
 .h2 {
   font-size: 60px;
   margin: 0;
@@ -205,7 +191,8 @@ nav .icon i:hover {
 /* section-2 */
 .proudect {
   width: 100%;
-  padding: 10px 0;
+  padding: 10px 70px;
+  background-color: #e0e6e7;
 }
 .Featured {
   font-size: 50px;
@@ -244,8 +231,10 @@ nav .icon i:hover {
   width: 100%;
 }
 .proudect-text {
-  padding: 10px;
+  /* padding: 5px; */
+  background-color: #fff;
 }
+
 .proudect-text p {
   font-size: larger;
   padding: 10px;
