--- a/New folder/zay_phon.css
+++ b/New folder/zay_phon.css
@@ -14,7 +14,7 @@
     margin: 0px -60px;
   }
   .review p {
-    font-size: 26px;
+    font-size: 22px;
     text-align: center;
   }
 
@@ -24,10 +24,14 @@
   }
 
   .proudect-card {
-    margin: 19px -29px;
+    margin: 23px -87px;
   }
   .proudect-img img {
     width: 88%;
+  }
+
+  .proudect {
+    padding: 50px 70px;
   }
   .product_price {
     font-size: 25px;
@@ -38,8 +42,8 @@
     background: #fff;
   }
   .preg {
-    font-size: 26px;
-    text-align: center;
+    font-size: 20px;
+    padding-top: 19px;
   }
 
   .row {
@@ -48,7 +52,7 @@
   }
   .footer {
     height: auto;
-    padding: 28px 14px;
+    padding: 28px 0px;
   }
   .footer-price {
     display: flex;
