--- a/New folder/zay.css
+++ b/New folder/zay.css
@@ -42,62 +42,12 @@
 }
 
 /* header  */
-nav {
-  background-color: #fff;
-  height: 80px;
-  width: 100%;
-}
-.logo {
-  color: green;
-  font-size: 55px;
-  line-height: 80px;
-  padding: 0 100px;
-  font-weight: bold;
-}
-nav ul {
-  float: right;
-  margin-right: 40px;
-}
-nav ul li {
-  display: inline-block;
-  line-height: 80px;
-  margin: 0 5px;
-}
-nav ul li a {
-  color: black;
-  font-size: 28px;
-  padding: 0px 13px;
-  text-decoration: none;
-}
-nav ul li a:hover {
-  color: aquamarine;
-}
-#gsearch {
-  display: none;
-}
-.a1 {
-  font-size: 30px;
-}
-
-.chekbtn {
-  font-size: 30px;
-  color: black;
-  float: right;
-  line-height: 80px;
-  margin-right: 40px;
-  cursor: pointer;
-  display: none;
-}
-#chek {
-  display: none;
-}
 
 /* slider  */
 .items {
   width: 100%;
   height: 500px;
   display: flex;
-  /* flex-direction: row-reverse; */
 }
 
 .h2 {
@@ -213,50 +163,50 @@ nav ul li a:hover {
 
 /* section-2 */
 .proudect {
-  width: 100%;
-  padding: 10px 70px;
+  padding: 125px 70px;
   background-color: #e0e6e7;
 }
-.Featured {
-  font-size: 35px;
+.texts {
   display: flex;
-
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: "Roboto", sans-serif;
 }
+.Featured {
+  font-size: 48px;
+}
 .preg {
   font-size: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
 }
 .proudect-box {
   width: 100%;
-  margin: 12px auto;
+
+  margin-top: 50px;
   display: flex;
-  gap: 10;
+
   background-color: #e0e6e7;
 }
 .proudect-card {
   width: 500px;
   height: 500px;
-  padding: 8px 20px;
+
   margin: 0 8px;
 }
-.proudect-img {
+/* .proudect-img {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   justify-content: space-between;
-}
+} */
 .proudect-img img {
   width: 100%;
 }
 .proudect-text {
-  /* padding: 5px; */
   background-color: #fff;
+  height: 400px;
 }
 
 .proudect-text p {
@@ -279,14 +229,16 @@ nav ul li a:hover {
   font-size: large;
 }
 .name {
-  font-size: 35px;
+  font-size: 30px;
   opacity: 0.6;
-
-  font-family: "Old Standard TT", serif;
+  margin-left: 10px;
+  font-family: "Roboto", sans-serif;
 }
 .rev {
   opacity: 0.5;
-  font-size: large;
+  font-size: 20px;
+  margin-top: 15px;
+  margin-left: 15px;
 }
 
 /* footer  */
@@ -374,7 +326,7 @@ nav ul li a:hover {
   justify-content: space-between;
 }
 .footer_icon {
-  margin-left: 40px;
+  margin-left: -20px;
   font-size: 30px;
 }
 .footer-col {
@@ -384,24 +336,54 @@ nav ul li a:hover {
   margin-left: 30px;
   margin-top: 30px;
   opacity: 0.8;
-  /* border: 2px solid #f0eaea;
-  border-radius: 60%; */
   background-color: #212934;
 }
 .footer_serch {
   padding: 28px;
 }
+
 #search {
   border: 2px solid #a5b1c5;
-  padding: 8px;
+  padding: 12px;
   background-color: #212934 !important;
-  opacity: 0.2;
+  opacity: 0.1;
+  border-radius: 5px;
 }
 .btn-submit {
   border: 2px solid #212934;
-  padding: 7px;
+  padding: 9px 18px;
   font-size: larger;
   color: white;
-  background-color: green;
-  opacity: 0.7;
+  background-color: rgb(75, 211, 75);
+  opacity: 0.8;
+  border-radius: 5px;
+}
+
+/* header  */
+nav {
+  background-color: #fff;
+  height: 80px;
+  width: 100%;
+}
+.logo {
+  color: green;
+  font-size: 55px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+}
+nav ul {
+  float: right;
+  /* margin-right: 40px; */
+}
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+nav ul li a {
+  color: black;
+  font-size: 28px;
+  padding: 0px 13px;
+  text-decoration: none;
 }
