--- a/New folder/zay.css
+++ b/New folder/zay.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  overflow-x: hidden;
+}
 #nav {
   width: 100%;
   height: 20%;
@@ -42,12 +45,65 @@
 }
 
 /* header  */
+nav {
+  background-color: #fff;
+  height: 80px;
+  width: 100%;
+}
+.logo {
+  color: green;
+  font-size: 55px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+}
+nav ul {
+  float: right;
+  margin-right: 40px;
+}
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+nav ul li a {
+  color: black;
+  font-size: 28px;
+  padding: 0px 13px;
+  text-decoration: none;
+}
+nav ul li a:hover {
+  color: aquamarine;
+}
+#gsearch {
+  display: none;
+}
+.a1 {
+  font-size: 30px;
+}
 
+.chekbtn {
+  font-size: 30px;
+  color: black;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#chek {
+  display: none;
+}
 /* slider  */
+
+.owl-stage-outer {
+  overflow: unset !important;
+}
 .items {
   width: 100%;
   height: 500px;
   display: flex;
+  /* flex-direction: row-reverse; */
 }
 
 .h2 {
@@ -92,7 +148,7 @@
   left: 0 !important;
 }
 .phr {
-  margin-top: 200px;
+  margin-top: 91px;
   margin-left: 100px;
 }
 
@@ -100,10 +156,31 @@
 .phr {
   width: 50%;
 }
+button.owl-prev:after {
+  content: "\f104";
+  font-family: FontAwesome;
+  color: #333;
+  font-size: 30px;
+}
+button.owl-next:after {
+  content: "\f105";
+  font-family: FontAwesome;
+  color: #333;
+  font-size: 30px;
+}
+button.owl-prev {
+  position: absolute;
+  top: 207px;
+  left: 58px;
+}
+button.owl-next {
+  position: absolute;
+  top: 207px;
+  right: 58px;
+}
 /* section-1  */
 .review {
   width: 100%;
-  /* padding: 10px 0; */
 }
 
 .review .review-heading {
@@ -163,7 +240,7 @@
 
 /* section-2 */
 .proudect {
-  padding: 125px 70px;
+  padding: 80px 70px;
   background-color: #e0e6e7;
 }
 .texts {
@@ -182,7 +259,6 @@
 }
 .proudect-box {
   width: 100%;
-
   margin-top: 50px;
   display: flex;
 
@@ -190,23 +266,16 @@
 }
 .proudect-card {
   width: 500px;
-  height: 500px;
-
+  height: 640px;
   margin: 0 8px;
 }
-/* .proudect-img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  justify-content: space-between;
-} */
+
 .proudect-img img {
   width: 100%;
 }
 .proudect-text {
   background-color: #fff;
-  height: 400px;
+  height: 350px;
 }
 
 .proudect-text p {
@@ -246,8 +315,9 @@
 .footer {
   background-color: #212934 !important;
   width: 100%;
-  height: 530px;
+  height: 560px;
   color: white;
+  margin-bottom: 50px;
   padding: 28px 50px 15px 63px;
   font-family: "Roboto", sans-serif;
 }
@@ -282,14 +352,13 @@
   opacity: 0.8;
 }
 
-.product a {
+.product p {
   text-decoration: none;
   font-size: 18px;
   color: gainsboro;
-  padding: 10px;
 }
 
-.product a:hover {
+.product p:hover {
   color: green;
 }
 
@@ -341,14 +410,15 @@
 .footer_serch {
   padding: 28px;
 }
-
 #search {
   border: 2px solid #a5b1c5;
   padding: 12px;
   background-color: #212934 !important;
   opacity: 0.1;
   border-radius: 5px;
+  /* color: white; */
 }
+
 .btn-submit {
   border: 2px solid #212934;
   padding: 9px 18px;
