--- a/New folder/zay_phon.css
+++ b/New folder/zay_phon.css
@@ -24,10 +24,14 @@
   }
 
   .proudect-card {
-    margin: 23px -87px;
+    margin: 40px -87px;
+    height: 490px;
   }
   .proudect-img img {
-    width: 88%;
+    width: 75%;
+  }
+  .texts {
+    text-align: center;
   }
 
   .proudect {
@@ -40,7 +44,17 @@
   .proudect-text {
     padding: 10px;
     background: #fff;
+    height: 250px;
   }
+  .review_icon {
+    font-size: large;
+  }
+
+  .proudect-text p {
+    width: 84%;
+    display: flex;
+  }
+
   .preg {
     font-size: 20px;
     padding-top: 19px;
@@ -53,6 +67,7 @@
   .footer {
     height: auto;
     padding: 28px 0px;
+    height: 935px;
   }
   .footer-price {
     display: flex;
@@ -68,6 +83,10 @@
   }
   .footer_icon i {
     margin-left: 20px;
+  }
+  .footer-col {
+    padding: 12px;
+    background: #212934 !important;
   }
 
   /* slider  */
@@ -89,5 +108,58 @@
   .phr {
     display: flex;
     flex-direction: column;
+  }
+
+  @media (max-width: 858px) {
+    .chekbtn {
+      display: block;
+    }
+    ul {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      position: fixed;
+      width: 100%;
+      height: 10vh;
+      background-color: #fff;
+      top: 80px;
+      left: 100%;
+      transition: all 0.5s;
+      flex-grow: 1;
+    }
+    nav ul li {
+      display: block;
+      margin: 10px 0;
+      line-height: 30px;
+    }
+    nav ul li a {
+      font-size: 25px;
+    }
+    .fa-solid {
+      font-size: 29px;
+      padding: 0 10px;
+    }
+    #gsearch {
+      padding: 10px 30px;
+      border: 2px solid black;
+      width: 50%;
+    }
+
+    a:hover {
+      background: none;
+      color: #0082e6;
+    }
+    #chek:checked ~ ul {
+      left: 0;
+      top: 78px;
+      z-index: 999999;
+      position: absolute;
+      background: #e0e6e7;
+      height: auto;
+    }
+    #gsearch {
+      padding: 10px 30px;
+      border: 2px solid black;
+    }
   }
 }
