--- a/New folder/zay.css
+++ b/New folder/zay.css
@@ -73,7 +73,7 @@ nav ul li a {
   text-decoration: none;
 }
 nav ul li a:hover {
-  color: aquamarine;
+  color: green;
 }
 #gsearch {
   display: none;
@@ -315,7 +315,7 @@ button.owl-next {
 .footer {
   background-color: #212934 !important;
   width: 100%;
-  height: 560px;
+  height: 580px;
   color: white;
   margin-bottom: 50px;
   padding: 28px 50px 15px 63px;
@@ -365,7 +365,7 @@ button.owl-next {
 .end {
   width: 100%;
   display: flex;
-  padding: 15px;
+  /* padding: 15px; */
   background-color: #212934 !important;
   font-size: large;
   color: gainsboro;
@@ -427,33 +427,4 @@ button.owl-next {
   background-color: rgb(75, 211, 75);
   opacity: 0.8;
   border-radius: 5px;
-}
-
-/* header  */
-nav {
-  background-color: #fff;
-  height: 80px;
-  width: 100%;
-}
-.logo {
-  color: green;
-  font-size: 55px;
-  line-height: 80px;
-  padding: 0 100px;
-  font-weight: bold;
-}
-nav ul {
-  float: right;
-  /* margin-right: 40px; */
-}
-nav ul li {
-  display: inline-block;
-  line-height: 80px;
-  margin: 0 5px;
-}
-nav ul li a {
-  color: black;
-  font-size: 28px;
-  padding: 0px 13px;
-  text-decoration: none;
 }
