--- a/card-2.css
+++ b/card-2.css
@@ -68,7 +68,7 @@
 /* card end  */
 
 /* footer  */
-
+/* 
 .footer_card_container {
   width: 33.3%;
 }
@@ -112,13 +112,13 @@
   width: 90%;
   opacity: 0.2;
   margin-top: 30px;
-}
+} */
 
 /* next */
-.footer-price {
+/* .footer-price {
   display: flex;
   justify-content: space-between;
-  /* margin-top: 30px; */
+
   background-color: #212934;
 }
 .footer_icon {
@@ -148,9 +148,9 @@
   margin-right: 80px;
   border-radius: 5px solid gray;
   color: #fff;
-}
+} */
 /* last  */
-.last {
+/* .last {
   background-color: #1d242d !important;
   height: 80px;
 }
@@ -215,5 +215,4 @@
   }
   .end {
     margin-top: 20px;
-  }
-}
+  } */
