--- a/website/zay.css
+++ b/website/zay.css
@@ -242,8 +242,8 @@ button.owl-next {
 
 .proudect {
   width: 100%;
-  /* height: 830px; */
   background-color: #e0e6e7;
+  margin-bottom: 50px;
 }
 .proudect .head {
   text-align: center;
@@ -296,30 +296,47 @@ button.owl-next {
   .proudect .head {
     font-size: 40px;
   }
+  .proudect_card .review-icon {
+    padding: 10px 0px;
+  }
+  .review-icon {
+    padding-right: 0px;
+  }
   .review_box {
     width: 100%;
     flex-direction: column;
   }
+  .gym {
+    color: #212934;
+    font-size: 50px;
+  }
   .proudect_card {
     margin: 20px;
+    height: 750px;
+  }
+  .proudect_text p {
+    padding: 10px 0px;
+    font-size: 25px;
+  }
+  .Review {
+    padding: 15px 0px;
   }
 }
 
 /* footer  */
-
 .footer {
   background-color: #212934 !important;
   width: 100%;
   height: 580px;
   color: white;
   margin-bottom: 50px;
-  padding: 28px 50px 15px 63px;
+  padding-bottom: 40px;
   font-family: "Roboto", sans-serif;
 }
 
 .row {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  justify-content: space-around;
 }
 .footer .row .footer-col span {
   color: #ebe2e2;
@@ -328,7 +345,7 @@ button.owl-next {
   font-family: "Roboto", sans-serif;
 }
 .hr-1 {
-  width: 90%;
+  width: 100%;
   margin-top: 10px;
   opacity: 0.2;
 }
@@ -363,6 +380,7 @@ button.owl-next {
   background-color: #212934 !important;
   font-size: large;
   color: gainsboro;
+  margin-left: 30px;
 }
 .footers {
   text-decoration: none;
@@ -389,7 +407,6 @@ button.owl-next {
   justify-content: space-between;
 }
 .footer_icon {
-  margin-left: -20px;
   font-size: 30px;
 }
 .footer-col {
@@ -403,6 +420,7 @@ button.owl-next {
 }
 .footer_serch {
   padding: 28px;
+  margin-right: 30px;
 }
 #search {
   border: 2px solid #a5b1c5;
@@ -420,11 +438,37 @@ button.owl-next {
   background-color: rgb(75, 211, 75);
   opacity: 0.8;
   border-radius: 5px;
+  text-decoration: none;
 }
 
 @media only screen and (min-width: 200px) and (max-width: 767px) {
   .row {
+    flex-direction: column;
+  }
+  .footer {
+    height: 1176px;
+  }
+
+  .footer-price {
     display: flex;
     flex-direction: column;
+  }
+  .footer_icon {
+    margin-left: 10px;
+  }
+
+  #search {
+    padding: 13px 14px;
+  }
+  .btn-submit {
+    padding: 10px;
+  }
+  .end {
+    height: 70px;
+    margin-left: 0px;
+  }
+
+  .end span {
+    margin-top: 15px;
   }
 }
